examples/erroneous/semantic_erroneous/logtypes.grc
fun main() : nothing

{
  if 'O' = 0 then
    writeString("Capital \'O\' and zero are the same.\n");
}
